objects/CaseItem__c.object
<CustomObject>
    <description>Case Item object for details related to cases.</description>
    <fields>
        <fullName>CaseItemData__c</fullName>
        <description>The data received as part of the Case Item submission. The intended content of this field is a structured JSON object.</description>
        <label>Case Item Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CaseItemLink__c</fullName>
        <description>A link to redirect the user to custom Case Item viewing page (/apex/DRS_CaseItem_CaseItemApp)</description>
        <formula>HYPERLINK(
  LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + &apos;/apex/DRS_CaseItem_CaseItemApp?id=&apos; +  Id, 
   Name
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Item Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Case for the Case Item</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Items</relationshipLabel>
        <relationshipName>CaseItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommunityPageURL__c</fullName>
        <description>The URL suffix of the community page on which the Case Item should be visible</description>
        <label>Community Page URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <description>The date/time on which the Case Item is due to be submitted.</description>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExpiryDate__c</fullName>
        <description>The date/time on which the Case Item will be marked as expired. Automation will run to make the item expired.</description>
        <inlineHelpText>The date/time on which the Case Item will be marked as expired. Automation will run to make the item expired.</inlineHelpText>
        <label>Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RoleGroup__c</fullName>
        <description>The intended audience of the Case Item to provide the required information.</description>
        <inlineHelpText>The person who you are requesting the Additional Information from. Note: This will be made visible to all Case Team Members, but editable only by the people in the Role Group selected.</inlineHelpText>
        <label>Role Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insurer</fullName>
                </value>
                <value>
                    <fullName>Worker/Worker Rep</fullName>
                </value>
                <value>
                    <fullName>Legal Firm</fullName>
                </value>
                <value>
                    <fullName>Sole Practitioner</fullName>
                </value>
                <value>
                    <fullName>Merit Review Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the Case Item</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubmittedByName__c</fullName>
        <formula>SubmittedBy__r.FirstName + &apos; &apos; + SubmittedBy__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmittedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who submitted the Case Item</description>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CaseItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of the Case Item</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_Item_Type</valueSetName>
        </valueSet>
    </fields>
    <label>Case Item</label>
    <nameField>
        <displayFormat>CIN-{00000}</displayFormat>
        <label>Case Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Items</pluralLabel>
    <recordTypes>
        <fullName>Case_Item</fullName>
        <active>true</active>
        <label>Case Item</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>